src/beispiel/browser/css/wuppertal.css
/* <![CDATA[ */ 

/* css adaptations for the 'archiv des beispiels' application */

body {
    background: #ebe5d9;
}

#wrapper {
    padding: 20px;
}

#wrapper2 {
    margin: 0 auto;
    width: 987px;
    box-shadow: 0 0 10px grey;
    -webkit-box-shadow: 0 0 10px grey;
    background: url(++resource++beispiel.images/content-bg.png);
}

#content,
#header,
#mainnav,
.sidepanel-component
{background-color: white;}

/* durch overflow:hidden; in #mainnav verschwindet die subnav;
stattdessen verwenden wir #login-link und z-index, um den Bereich
rechts neben der #mainnav ohne Hintergrund-Muster zu halten. */
#mainnav ul {
    position: relative;
    z-index: 3;
}
#mainnav ul ul {
    z-index: 3;
}
#bgmainnav {
    position: relative;
    z-index: 2;
}
#mainnav #login-link {
    float: none;
    display: block;
    position:absolute;
    width: 100%;
    background-color: white;
    z-index: 1;
    padding: 0;
    font-size: 1.5em;
    border: 0;
}


/* Boxen hell: e7e7e7 (dae5f0)
   Boxen dunkel: afafaf (ffff00)
   Orange: f39136
*/

a:link, a:visited {color:#f39136; text-decoration:none;}
a:hover { color: #f39136; text-decoration:underline;}
a:active { color: #034ea2; }

#othernav a:link {text-decoration: underline;}

#contentlabel,
.sidepanel-label,
.wizard .header {
    background-color: #e7e7e7;
}

#bgmainnav {
    background-color: #afafaf;
}

.current-editorial-status,
.wizard .viewspace .form-info,
.edit-form .viewspace .form-info,
fieldset.attribution-subform legend,
#search-categories fieldset legend,
.edit-form .viewspace .similar-work-items,
.edit-form .viewspace .workitem-relations,
.edit-form .viewspace .workitem-object,
.edit-form .viewspace .workitem-workflow-history,
.workflow .history .description,
fieldset.attribution-subform {
    border-color: #e7e7e7;
}

#mainnav li.selected .active {
    border-color: #afafaf;
}

#contentlabel,
#bgmainnav,
#content,
#tabbedcontent,
.sidepanel-content,
.sidepanel-label,
.wizard,
.wizard .viewspace .label,
.edit-form .viewspace .label,
#itemtabs li a,
div.category-long-description div.long_description-footer,
.revision-history hr,
hr.commentary-ruler {
    border-color: #c2c7cd;
}

#header {
    position: relative;
    margin: 0;
    min-height: 95px;
    color: #649600;
}

#header-head-ruler {
    position: absolute;
    background-color: #f39136;
    top: 0;
    width: 72%;
    height: 4px;
}

#content-wrapper:nth-child(7) {
    width: 72%;
}

#sidepanel-wrapper {
    width: 28%;
}

#header .header-columns {
    position: relative;
}

#header .header-logo {
    display: block;
    float: right;
    padding-right: 25px;
    padding-top: 25px;
}

#header .header-logo img {
    height: 70px;
}

#header .header-left {
    display: block;
    float: left;
    width: *;
    padding-left: 25px;
    padding-top: 21px;
    color: #fceade;
    font-size: 20pt;
    font-weight: 900;
    line-height: 1;
}

#header .header-right {
    display: inline;
    margin-left: 20px;
    font-size: 1.5em;
    font-weight: 500;
}

#header a,
#header a:hover,
#header a:visited {
    color: #649600;
    text-decoration: none;
}

/*
#mainnav li li.selected {
    color:#649600;
}
#bgmainnav {
    background-color:#649600;
}
*/

.frontpage-provider {
    /*border:1px solid red;*/
}

.frontpage-provider div {
    margin-bottom: 10px;
    /*border:1px solid green;*/
    border-bottom: 1px solid #c2c7cd;
}
.frontpage-provider div:last-child,
.frontpage-provider div div {
    border: none;
}

.publication-cover {
    display: block;
    margin: 10px auto 0 auto;
    width: 12em;
    border: 1px solid #c2c7cd;
}

#search {
    height:240px;
    position:relative;
}

#search h1 {display:none;}

#search #search-form {
    position:absolute;
    top:50%;
    padding-bottom:20px;
    transform: translateY(-50%);
}

#search tr {
    display: inline;
}

#search button {
    background-color: #fff;
    border: 0;
    color: #f39136;
    font-size: 1.4em;
    line-height: 1;
    font-weight: bold;
    text-transform: uppercase;
    text-family: sans-serif;
    vertical-align: bottom;
}


/* ]]> */

